--- a/PIRESQuestions/PIRESQuestions/PIRESQuestions.csproj
+++ b/PIRESQuestions/PIRESQuestions/PIRESQuestions.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\IServices\IServices.csproj" />
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
