--- a/PIRESQuestions/Services/Services.csproj
+++ b/PIRESQuestions/Services/Services.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
     <ProjectReference Include="..\IRepositories\IRepositories.csproj" />
     <ProjectReference Include="..\IServices\IServices.csproj" />
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
   </ItemGroup>
 
 </Project>
