--- a/PIRESQuestions/PIRESQuestions/PIRESQuestions.csproj
+++ b/PIRESQuestions/PIRESQuestions/PIRESQuestions.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
