--- a/PIRESQuestions/Repositories/Repositories.csproj
+++ b/PIRESQuestions/Repositories/Repositories.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj" />
     <ProjectReference Include="..\IRepositories\IRepositories.csproj" />
+    <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
   <ItemGroup>
